Fix spacing of radio and checkbox elements in terms box

--- a/css/meta-boxes.scss
+++ b/css/meta-boxes.scss
@@ -5,11 +5,15 @@
 	}
 
 	ul {
+		li {
+			margin-bottom: .2em;
+		}
+
 		li:last-child {
 			border-top: 1px solid #eee;
 			color: #888;
-			margin-top: 5px;
-			padding-top: 5px;
+			margin-top: .8em;
+			padding-top: .8em;
 		}
 	}
 }
