--- a/js/src/gutenberg/meta-boxes/Taxonomy/radio.pcss
+++ b/js/src/gutenberg/meta-boxes/Taxonomy/radio.pcss
@@ -1,6 +1,5 @@
 .control {
 	:global(.components-radio-control__option) { /* stylelint-disable-line */
-		margin-bottom: .5em;
 
 		input {
 			margin-right: 12px;
